add package versions

--- a/SPE-fit.ipynb
+++ b/SPE-fit.ipynb
@@ -6,25 +6,37 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/anaconda3/envs/py37/lib/python3.7/site-packages/Cython/Compiler/Main.py:369: FutureWarning: Cython directive 'language_level' not set, using 2 for now (Py2). This will change in a later release! File: /HDD/backuped/Promotion_data/Git_Scripts/SPE_spectrum_calibration/Binned_LLH_cython.pyx\n",
-      "  tree = Parsing.p_module(s, pxd, full_module_name)\n"
+      "iminuit version 1.4.9\n",
+      "numpy version 1.20.2\n",
+      "scipy version 1.5.1\n"
      ]
     }
    ],
    "source": [
+    "#Check package versions, otherwise you don't have to run this cell\n",
+    "import iminuit\n",
+    "import numpy\n",
+    "import scipy\n",
+    "print(\"iminuit version\", iminuit.__version__)\n",
+    "print(\"numpy version\", numpy.__version__)\n",
+    "print(\"scipy version\", scipy.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pyximport\n",
-    "import time\n",
     "from iminuit import Minuit\n",
-    "import glob\n",
     "import numpy as np\n",
-    "from scipy.optimize import minimize\n",
     "import matplotlib.pyplot as plt\n",
-    "from collections.abc import Container, Iterable\n",
     "from scipy.optimize import curve_fit\n",
-    "import yaml\n",
+    "\n",
     "pyximport.install(\n",
     "    setup_args=dict(\n",
     "        include_dirs=[np.get_include()], \n",
@@ -243,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1254,10 +1266,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3b7504bbd0>"
+       "<matplotlib.legend.Legend at 0x7f36cdb64850>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
