add few comments

--- a/SPE-fit.ipynb
+++ b/SPE-fit.ipynb
@@ -211,6 +211,7 @@
     }
    ],
    "source": [
+    "#Bounds parameter space\n",
     "limits = dict(limit_Q0 = (None,None),\n",
     "          limit_s0 = (0.000000000001,None),\n",
     "          limit_Q1 = (0.,None),\n",
@@ -219,6 +220,7 @@
     "          limit_height = (0.,1e6),\n",
     "          limit_n_omega = (0.00001,1.0),\n",
     "          limit_n_alpha = (0.0001,1.0))\n",
+    "#Initial estimate of errors, normally 10% of initial values is alright\n",
     "error = dict(error_Q0 = .1,\n",
     "         error_s0 = .05,\n",
     "         error_Q1 = .5,\n",
@@ -227,6 +229,7 @@
     "         error_height = 0.,\n",
     "         error_n_omega = .1,\n",
     "         error_n_alpha = 1.)\n",
+    "#If parameter is fixed, it is left constant... height should always be the total nr of counts -> fix True\n",
     "fix = dict(fix_Q0 = False,\n",
     "         fix_s0 = False,\n",
     "         fix_Q1 = False,\n",
@@ -236,14 +239,18 @@
     "         fix_n_omega = False,\n",
     "         fix_n_alpha = False)\n",
     "\n",
+    "#Get initial values, function in Binned_LLH_cython.pyx\n",
     "p0 = Initial_paramters(bin_edges_data, y, np.mean(bkc), np.std(bkc)*1e12/(50))\n",
+    "\n",
+    "#Class for data handling and llh in Binned_LLH_cython.pyx\n",
     "mlh = Binned_LLH(bin_edges_data, y)\n",
     "minuit_args = {**p0, **limits, **error, **fix, **dict(errordef= 0.5)}\n",
     "\n",
+    "#Pass mlh.compute, which calculates -log likelihood, to Minuit\n",
     "m = Minuit(mlh.compute, **minuit_args)\n",
     "\n",
     "m.tol = 1e-12\n",
-    "m.migrad()\n"
+    "m.migrad() #Fits\n"
    ]
   },
   {
